Added a small explanation of what a compiler does.

--- a/slides/index.html
+++ b/slides/index.html
@@ -89,7 +89,7 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading" style="margin-top: 10px;">Kehitysympäristö <span class="text-muted">tai IDE.</span></h2>
-              <p><a href="http://fi.wikipedia.org/wiki/Ohjelmointiymp%C3%A4rist%C3%B6">Wikipedian</a> mukaan &ldquo;Ohjelmointiympäristö on ohjelma tai joukko ohjelmia, jolla ohjelmoija suunnittelee ja toteuttaa ohjelmistoa. Yksinkertaisimmillaan ohjelmointiympäristö on tekstieditori ja ohjelmointikielen kääntäjä. Tekstieditorilla tuotetaan lähdekoodia joka käännetään komentorivikääntäjällä.&rdquo; IDE (integrated development environment) on käytännössä yhteen pakettiin integroitu tekstieditori ja kääntäjä.</p>
+              <p><a href="http://fi.wikipedia.org/wiki/Ohjelmointiymp%C3%A4rist%C3%B6">Wikipedian</a> mukaan &ldquo;Ohjelmointiympäristö on ohjelma tai joukko ohjelmia, jolla ohjelmoija suunnittelee ja toteuttaa ohjelmistoa. Yksinkertaisimmillaan ohjelmointiympäristö on tekstieditori ja ohjelmointikielen kääntäjä.&rdquo; Ohjelmoija kirjoittaa tekstieditorilla koodia, jonka kääntäjä muuttaa tietokoneen ymmärtämään konekieliseen muotoon. IDE (integrated development environment) on käytännössä yhteen pakettiin integroitu tekstieditori ja kääntäjä.</p>
               <p>Perinteisempiä, työpöydältä käytettäviä IDE:jä ovat mm.
                 <ul>
                   <li><a href="http://www.eclipse.org/">Eclipse</a></li>
