Fixed minor typos

--- a/slides/index.html
+++ b/slides/index.html
@@ -205,7 +205,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails generate scaffold Squeek
       invoke  resource_route
        route    resources :squeeks
       invoke  scaffold_controller
-      create    app/controllers/squeeks_controller.r
+      create    app/controllers/squeeks_controller.rb
       invoke    erb
       create      app/views/squeeks
       create      app/views/squeeks/index.html.erb
@@ -226,7 +226,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails generate scaffold Squeek
       invoke    coffee
       create      app/assets/javascripts/squeeks.js.coffee
       invoke    scss
-      create      app/assets/stylesheets/squeeks.css.scs
+      create      app/assets/stylesheets/squeeks.css.scss
       invoke  scss
       create    app/assets/stylesheets/scaffolds.css.scss
 action@squirrel-rails-59591:~/workspace/squirrel$                                  
