Added note about rake db:migrate

--- a/slides/index.html
+++ b/slides/index.html
@@ -217,6 +217,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails generate scaffold Squeek
       create    app/assets/stylesheets/scaffolds.css.scss
 action@squirrel-rails-59591:~/workspace/squirrel$                                  
                 </pre>
+                <p>Jotta ohjelmiston tiedot saadaan muiden käyttäjien nähtäville, se pitää tallentaa palvelimelle. Tietovarastona käytetään tietokantaa, jonne data säilötään. Tietokannalle pitää kertoa, mitä sen pitää ostata tallentaa. Tämä tehdään komennolla <code>rake db:migrate</code>.</p>
               </div>
             </div>
 
