More fine-tuning. :D

--- a/slides/index.html
+++ b/slides/index.html
@@ -226,7 +226,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rake db:migrate
 ==  CreateSqueeks: migrated (0.0068s) =========================================
 action@squirrel-rails-59591:~/workspace/squirrel$
                 </pre>
-                <p>Jotta ohjelma osaisi näyttää oikean sivun, pitää sille kertoa mitä halutaan näyttää. Vasemman reunan valikosta etsitään tiedosto <em>routes.rb</em>
+                <p>Seuraavaksi konfiguroidaan sovellus siten, että sitä avatessa näytetään lista squeekeistä (facepalm). Vasemman reunan valikosta etsitään tiedosto <em>routes.rb</em>
                 <ol class="breadcrumb">
                   <li>~</li>
                   <li>workspace</li>
