--- a/slides/index.html
+++ b/slides/index.html
@@ -247,7 +247,7 @@ Squirrel::Application.routes.draw do
 
 end
                 </pre> 
-                <p>Tässä kohtaa ohjelman perustoiminnallisuus onkin valmis, eli ei muuta kuin testaamaan <code>rails server</code>.</p>
+                <p>Tässä kohtaa ohjelman perustoiminnallisuus onkin valmis, eli ei muuta kuin testaamaan: <code>rails server</code>.</p>
                 <pre>
 action@squirrel-rails-59591:~/workspace/squirrel$ rails server
 =&gt; Booting WEBrick
