--- a/slides/index.html
+++ b/slides/index.html
@@ -262,6 +262,26 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails server
               </div>
             </div>
 
+            <div class="row-feeaturette">
+              <div class="col-md-12">
+                <p>Tuloksen pitäisi näyttää jotakuinkin seuraavalta:</p>
+              </div>
+              <div class="row-feeaturette">
+                <div class="col-md-3">
+                  <img style="border: 1px solid black; margin: 3px;" src="images/initial_index_empty.png">
+                </div>
+                <div class="col-md-3">
+                  <img style="border: 1px solid black; margin: 3px;" src="images/initial_new_data.png">
+                </div>
+                <div class="col-md-3">
+                  <img style="border: 1px solid black; margin: 3px;" src="images/initial_show.png">
+                </div>
+                <div class="col-md-3">
+                  <img style="border: 1px solid black; margin: 3px;" src="images/initial_index_data.png">
+                </div>
+              </div>
+            </div>
+
           </div>
         </section>
 
