--- a/slides/index.html
+++ b/slides/index.html
@@ -258,7 +258,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails server
 [2013-12-10 22:46:34] INFO  ruby 2.0.0 (2013-06-27) [x86_64-linux]
 [2013-12-10 22:46:34] INFO  WEBrick::HTTPServer#start: pid=655 port=3000
                 </pre>
-                <p>Ja tämän jälkeen taas sivuston ylävalikosta Preview ja Port 3000</p>
+                <p>Valitaan taas sivuston ylävalikosta Preview ja Port 3000.</p>
               </div>
             </div>
 
