Tidying up layout

--- a/slides/index.html
+++ b/slides/index.html
@@ -263,25 +263,31 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails server
             </div>
 
             <div class="row-feeaturette">
-              <div class="col-md-12">
-                <p>Tuloksen pitäisi näyttää jotakuinkin seuraavalta:</p>
-              </div>
+              <p>Tuloksen pitäisi näyttää jotakuinkin seuraavalta:</p>
               <div class="row-feeaturette">
-                <div class="col-md-3">
+                <div class="col-md-3" style="text-align: center;">
                   <img style="border: 1px solid black; margin: 3px;" src="images/initial_index_empty.png">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" style="text-align: center;">
                   <img style="border: 1px solid black; margin: 3px;" src="images/initial_new_data.png">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" style="text-align: center;">
                   <img style="border: 1px solid black; margin: 3px;" src="images/initial_show.png">
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" style="text-align: center;">
                   <img style="border: 1px solid black; margin: 3px;" src="images/initial_index_data.png">
                 </div>
               </div>
+              <span class="clearfix">&nbsp;</span>
+              <p>Ei nyt ihan Twitter, eihän?</p>
             </div>
 
+
+            <div class="row featurette">
+              <div class="col-md-12">
+                <h2 class="featurette-heading" style="margin-top: 10px">Tyyliä peliin</h2>
+              </div>
+            </div>
           </div>
         </section>
 
