Intro to bootstrap added.

--- a/slides/index.html
+++ b/slides/index.html
@@ -287,6 +287,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails server
               <div class="col-md-12">
                 <h2 class="featurette-heading" style="margin-top: 10px">Tyyliä peliin</h2>
               </div>
+			  <p>Ohjelmistokehityksessä on yleensä järkevää uudelleenkäyttää komponentteja, jotka joku muu on tehnyt valmiiksi samaa käyttötarkoitusta ajatellen. Sama pätee esimerkkimme kohdalla myös käyttöliittymään, eli ohjelmiston käyttäjälle näkyvään osaan. Twitter on nimittäin julkaissut tyylikirjastonsa, joten käytetään sitä.</p>
             </div>
           </div>
         </section>
