--- a/slides/index.html
+++ b/slides/index.html
@@ -279,7 +279,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails server
                 </div>
               </div>
               <span class="clearfix">&nbsp;</span>
-              <p>Ei nyt ihan Twitter, eihän?</p>
+              <p>Ihan hyvä Twitter 5/5.</p>
             </div>
 
 
