--- a/slides/index.html
+++ b/slides/index.html
@@ -287,7 +287,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$ rails server
               <div class="col-md-12">
                 <h2 class="featurette-heading" style="margin-top: 10px">Tyyliä peliin</h2>
                 <p>Ohjelmistokehityksessä on yleensä järkevää uudelleenkäyttää komponentteja, jotka joku muu on tehnyt valmiiksi samaa käyttötarkoitusta ajatellen. Sama pätee esimerkkimme kohdalla myös käyttöliittymään, eli ohjelmiston käyttäjälle näkyvään osaan. Twitter on nimittäin julkaissut tyylikirjastonsa, joten käytetään sitä.</p>
-                <p>Lisätään siis sopivat palikat osaksi projektia. Rubyssä näitä palikoita kutsutaan nimellä Gem ja tiedostossa <em>Gemfile</em> määritellää projektin käyttämät gemit.</p>
+                <p>Lisätään siis sopivat palikat osaksi projektia. Rubyssä näitä palikoita kutsutaan nimellä Gem ja tiedostossa <em>Gemfile</em> määritellään projektin käyttämät gemit.</p>
 
                 <p>Lisätään tiedostoon rivin 30 paikkeille <code>gem 'therubyracer'</code>, <code>gem 'less-rails</code> ja <code>gem 'twitter-bootstrap-rails'</code> seuraavasti:</p>
                 <pre>
