Added link to demo

--- a/slides/index.html
+++ b/slides/index.html
@@ -347,6 +347,7 @@ action@squirrel-rails-59591:~/workspace/squirrel$
                 </pre>
                 <p>Tadaa:</p>
                 <img src="images/bootstrap_index_data_fixed.png">
+                <p>Ja ohjelmiston kehitystä voikin sitten jatkaa eteenpäin <a href="http://squirrel-rails-59591.euw1.actionbox.io/">vaikka tähän suuntaan</a> <em>(Linkki toimii vain, mikäli oma Nitrous-palvelimeni on päällä. Huomauttakaa jos ei toimi.)</em>
               </div>
             </div>
           </div>
