--- a/slides/index.html
+++ b/slides/index.html
@@ -336,6 +336,16 @@ action@squirrel-rails-59591:~/workspace/squirrel$
                 <p>Sitten vain <code>rails server</code> ja sivu näyttää jotakuinkin tältä</p>
                 <img src="images/bootstrap_index_data.png">
                 <p>Otsikko menee hieman yläpalkin ylle, korjataan se vielä. Muokataan tiedostoa <em>application.html.erb</em> ja sieltä <code>&lt;body&gt;</code> muotoon <code>&lt;body style="padding-top: 50px"&gt;</code> (rivin 39 paikkeilla).
+                <ol class="breadcrumb">
+                  <li>~</li>
+                  <li>workspace</li>
+                  <li>squirrel</li>
+                  <li>app</li>
+                  <li>views</li>
+                  <li>layouts</li>
+                  <li>application.html.erb</li>
+                </ol>
+
                 <pre>
 [...]
     &lt;%= javascript_include_tag "application" %&gt;
